--- a/SPA/public/css/style.css
+++ b/SPA/public/css/style.css
@@ -5,6 +5,17 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+.pricing-carousel .owl-item {
+    height: 100%;
+    display: inline-table;
+    min-height: 550px !important;
+}
+
+.pricing-carousel .owl-stage {
+    display: flex;
+}
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
