--- a/SPA/public/css/header.css
+++ b/SPA/public/css/header.css
@@ -108,3 +108,86 @@
     background-color: white !important;
     color: black !important;
 }
+
+.mobile-nav {
+    display:  none !important;
+}
+
+.sub-menu-mobile {
+    display: none;
+}
+
+.sub-menu-mobile.open {
+    display: block; /* Hiển thị sub-menu khi có class 'open' */
+}
+
+@media (max-width: 768px) {
+    #fixNav {
+        display: none !important;
+    }
+
+    .mobile-nav {
+        top: 0px;
+        z-index: 1001;
+        width: 100%;
+        height: 70px;
+        display: block !important;
+        position: fixed;
+        background-color: white;
+    }
+
+    #menu_toggle {
+        height: 70px;
+        display: flex;
+        padding: 0px 10px;
+        color: darkgray;
+        font-size: xx-large;
+        align-items: center;
+        justify-content: end;
+        border-bottom: 1px solid #ccc;
+        box-shadow: 0 0 0 0.2rem rgba(221, 210, 209, 0.5);
+    }
+
+    #menu_mobile {
+        overflow: auto;
+        max-height: 75vh;
+    }
+
+    .mobile-nav ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        background-color: white;
+    }
+
+    .mobile-nav ul li {
+        color: #333;
+        font-weight: bold;
+        padding: 5px 10px;
+        border-bottom: 1px solid #ccc;
+    }
+
+    .mobile-nav ul li .sub-menu-mobile li {
+        border: none;
+        padding: 0px;
+    }
+
+    .mobile-nav ul li ul {
+        padding-left: 15px;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .mobile-nav ul li a {
+        color: #333;
+        padding: 10px;
+        display: block;
+        text-decoration: none;
+    }
+
+    .mobile-nav ul li a:hover {
+        background-color: #ddd;
+    }
+}
