--- a/SPA/public/css/header.css
+++ b/SPA/public/css/header.css
@@ -27,7 +27,7 @@
 .menu li a{
     display: block;
     color: #dcb43b;
-    padding: 0 10px;
+    padding: 0 25px;
     font-size: 16px;
     font-weight: bold;
     white-space: nowrap;
@@ -171,8 +171,12 @@
     }
 
     .mobile-nav ul li .sub-menu-mobile li {
+        padding: 5px 10px;
+    }
+
+
+    .mobile-nav ul li .sub-menu-mobile li:nth-child(10) {
         border: none;
-        padding: 0px;
     }
 
     .mobile-nav ul li ul {
