--- a/SPA/public/css/main.css
+++ b/SPA/public/css/main.css
@@ -384,6 +384,7 @@ p {
         width: 96%;
         margin: 0 auto;
         position: unset;
+        transform: unset;
     }
 
     .working-hours-img {
